--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <p id="simple-bookmarking" class=" slider-activator features-section-simple-bookmarking-tab clicked">Simple
           Bookmarking</p>
         <p id="speedy-searching" class=" slider-activator  features-section-speedy-searching-tab">Speedy Searching</p>
-        <p id="easy-sharing" class=" slider-activator  features-section-easy-sharing-tab"">Easy Sharing</p> 
+        <p id="easy-sharing" class=" slider-activator  features-section-easy-sharing-tab">Easy Sharing</p> 
         </div>
       </div>   
       </section>           
